# yara-metadata

./: .pre-commit-hooks.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.rst  pyproject.toml
.github/: ISSUE_TEMPLATE.md
src/yara_metadata/: __init__.py  yara_metadata.py  yarax_format.py
